# foreign-aid

./: .gitignore
backend/: .env  Cargo.toml  docker-compose.yml
backend/infrastructure/migrations/: 20260526181511_players.down.sql  20260526181511_players.up.sql  20260529163907_matches.down.sql  20260529163907_matches.up.sql
backend/src/: api.rs  application.rs  db.rs  main.rs
backend/src/api/: error.rs  handlers.rs  server.rs  version.rs
backend/src/api/handlers/: player_handlers.rs
backend/src/api/routes/: player_routes.rs
backend/src/application/: app.rs  config.rs  repository.rs  state.rs
backend/src/application/repository/: matches_repo.rs  player.rs  player_repo.rs
backend/src/db/: options.rs  postgres.rs
backend/src/domain/models/: matches.rs  players.rs
